# brett-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hk.pkl  mise.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  maintenance.yml
docs/: index.md
docs/user-manual/: reference.md
